// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > renders correctly with animation 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="relative h-4 w-full overflow-hidden rounded-full border border-border bg-gray-200"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 0%; background-color: red; transition: width 500ms ease-in; width: 30%;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 0%; background-color: red; transition: width 500ms ease-in; transform: translateX(-70%); width: 30%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 30%; background-color: blue; transition: width 500ms ease-in; width: 50%;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 30%; background-color: blue; transition: width 500ms ease-in; transform: translateX(-50%); width: 50%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 80%; background-color: green; transition: width 500ms ease-in; width: 20%;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 80%; background-color: green; transition: width 500ms ease-in; transform: translateX(-80%); width: 20%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > renders correctly without animation 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="relative h-4 w-full overflow-hidden rounded-full border border-border bg-gray-200"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 0%; width: 30%; background-color: red; transition: none;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 0%; width: 30%; background-color: red; transition: none; transform: translateX(-70%);"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 30%; width: 50%; background-color: blue; transition: none;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 30%; width: 50%; background-color: blue; transition: none; transform: translateX(-50%);"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="w-full overflow-hidden bg-secondary absolute h-full rounded-none"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
        style="left: 80%; width: 20%; background-color: green; transition: none;"
      >
        <div
          class="size-full flex-1 transition-all"
          data-max="100"
          data-state="indeterminate"
          style="left: 80%; width: 20%; background-color: green; transition: none; transform: translateX(-80%);"
        />
      </div>
    </div>
  </div>
</div>
`;
